2006-07-11  Richard Levitte  <richard@levitte.org>

	* po/sv.po: Two new strings to translate.

2006-07-10  Derek Scherger  <derek@echologic.com>

	* restrictions.cc (node_restriction::includes,
	path_restriction::includes): handle --depth with empty restriction
	(test_include_depth_0_empty_restriction): new test for depth with
	empty restriction
	* restrictions.cc (add_restrictions_tests): add it to the testsuite
	* sanity.hh (dump): new template function for dumping variables
	when fiddling around or debugging
	(DUMP): macro wrapper for new dump function

2006-07-10  Zack Weinberg  <zackw@panix.com>

	* tests/diff_output_formats: Merge from mainline.  Correct
	expected output where necessary.  Use long switches in __driver__.lua.
	* diff_patch.cc (hunk_consumer::find_encloser): Use
	reverse_iterators instead of mucking with ssize_t.
	(unidiff_hunk_writer::flush_hunk)
	(ctxdiff_hunk_writer::flush_hunk): Scan what is about to be
	output, and give find_encloser exactly the right position.
	(make_diff): Collapse the overload that takes vectors of strings
	into its sole caller, the other overload.  * diff_patch.hh: Remove
	prototype for deleted overload of make_diff.

2006-07-10  Zack Weinberg  <zackw@panix.com>

	* tests/database_is_closed_on_signal_exit/__driver__.lua: Invert
	sense of SIGSEGV test - expect database *not* to be cleaned up,
	consistent with main.cc.  Remove xfail.

2006-07-10  Zack Weinberg  <zackw@panix.com>

	* configure.ac: Add test and workaround for gcc 4.1.[01] bug
	causing link to fail with a pile of multiple-definition errors.
	* .mtn-ignore: Add aclocal.m4 and all the files in m4/ that
	autoreconf --install likes to create.

2006-07-10  Zack Weinberg  <zackw@panix.com>

	* po/de.po, po/fr.po, po/it.po, po/ja.po, po/pt_BR.po: Re-msgmerge'd.

2006-07-10  Richard Levitte  <richard@levitte.org>

	* po/sv.po: A string got changed...

2006-07-09  Nathaniel Smith  <njs@pobox.com>

	* cmd_merging.cc (pluck): Restrictions support.