@@ -1,3 +1,7 @@
+2006-07-12  Timothy Brownawell  <tbrownaw@gmail.com>
+
+	* tests/diff_output_formats/__driver__.lua: Needs canonicalization.
+
 2006-07-11  Richard Levitte  <richard@levitte.org>
 
 	* po/sv.po: Two new strings to translate.
